--- a/LBOM/Web.config
+++ b/LBOM/Web.config
@@ -7,12 +7,12 @@
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <sectionGroup name="devExpress">
+    <!--<sectionGroup name="devExpress">
       <section name="themes" type="DevExpress.Web.ThemesConfigurationSection, DevExpress.Web.v15.2, Version=15.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
       <section name="compression" type="DevExpress.Web.CompressionConfigurationSection, DevExpress.Web.v15.2, Version=15.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
       <section name="settings" type="DevExpress.Web.SettingsConfigurationSection, DevExpress.Web.v15.2, Version=15.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
       <section name="errors" type="DevExpress.Web.ErrorsConfigurationSection, DevExpress.Web.v15.2, Version=15.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
-    </sectionGroup>
+    </sectionGroup>-->
   </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -22,6 +22,7 @@
     <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
   <system.web>
+    <customErrors mode="Off"></customErrors>
     <compilation debug="true" targetFramework="4.5.2">
       <assemblies>
         <!--<add assembly="DevExpress.Data.v15.2, Version=15.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
